fix padding and height on nav to allow vertical-align to work

--- a/app/styles/components.scss
+++ b/app/styles/components.scss
@@ -21,11 +21,11 @@ COMPONENTS: ELEMENTS
 *************************/
 
 nav {
-  padding: 15px 5%;
+  padding: 10px 5%;
   position: fixed;
   z-index: 9999;
   width: 100%;
-  height: 50px;
+  height: 40px;
   background-color: rgba(85, 85, 85, 0.5);
 }
 
