--- a/app/styles/typography.scss
+++ b/app/styles/typography.scss
@@ -4,10 +4,10 @@ TYPOGRAPHY
 
 h1 {
   position: absolute;
-  top: 0;
-  left: 5%;
   color: #FFF;
-  font-weight: 200;
+  font-weight: 100;
+  margin: auto;
+  vertical-align: middle;
 }
 
 p {
